Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-29429

[REG: QtCreator 10 -> QtCreator 11] QtCreator / SCXML_Designer crashes with onEntry/onExit and internal transitions

XMLWordPrintable

    • 609e5e212 (11.0)

      Regression from QtCreator 10 (working, no displayed onEntry/onExit events) to QtCreator 11 (broken, displayed onEntry/onExit events)

       

      QtCreator 11 crashes when trying to view StateMachines in the SCXML-Editor with onEntry/onExit events and internal transitions in the same state.

      QtCreator 11 also crashes when trying to add onEntry/onExit events to states with internal transitions (and vice versa) in the SCXML-Editor.

       

      Either:

      • Add an onEntry - send event to the attached statemachine in the SCXML-Editor
      • EXPECTED: onEntry event and internal transition shown together in State_1
      • ACTUAL: QtCreator crashes

      Or:

      • Create a new StateMachine
      • Add a new state (automatically State_1)
      • Add an onEntry - send event
      • Add an internal transition (transition from State_1 to State_1)
      • EXPECTED: onEntry event and internal transition shown together in State_1
      • ACTUAL: QtCreator crashes

       

      possibly due to https://bugreports.qt.io/browse/QTCREATORBUG-17378

        For Gerrit Dashboard: QTCREATORBUG-29429
        # Subject Branch Project Status CR V

            artem.sokolovskii Artem Sokolovskii (Inactive)
            m.hartwig Marc Hartwig
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes