SxmlEditor: Fix crash with transitions and onEntry events

Fixed a crash in SxmlEditor that occurred when transitions and
onEntry/onExit events were displayed together.

Fixes: QTCREATORBUG-29429
Change-Id: Idca72ac1a661355a2caaa3f16457e4cfb9aaa785
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>